Fix some spacing issues

--- a/theme/less/gouvfr-dataset.less
+++ b/theme/less/gouvfr-dataset.less
@@ -160,10 +160,6 @@ body.dataset-display {
             line-height: 1.4em;
         }
 
-        .btn {
-            margin: 0px;
-        }
-
         .infos-list {
             li {
                 margin-bottom: 5px;
@@ -278,7 +274,11 @@ body.dataset-display {
 
     //Opinion row
     .opinion {
-        margin-bottom: 20px
+        margin-bottom: 15px;
+
+        .btn-group {
+            margin-bottom: 5px;
+        }
     }
 
     //widget qualité
