--- a/theme/less/gouvfr-reuse.less
+++ b/theme/less/gouvfr-reuse.less
@@ -137,14 +137,17 @@ body.reuse-display {
             }
 
             .btn-toolbar {
+                .btn-group {
+                    margin-bottom: 5px;
+                }
+
                 .btn-follow {
                     background: #2267af;
-                    border: 1px solid #2267af;
                 }
+                
                 .btn-share {
                     background: white;
                     color: rgb(163, 163, 163);
-                    border: 1px solid #C9C9C9;
                     border-right: white;
                     border-left: white;
 
@@ -152,9 +155,6 @@ body.reuse-display {
                         background: rgb(221, 221, 221);
                         color: rgb(129, 129, 129);
                     }
-                }
-                .btn-danger {
-                    border: 1px solid #ea1f36 !important;
                 }
             }
         }
